Changelog
=========

3.4.1 (unreleased)
------------------

- Use `ftw.profilehook` instead of setuphandlers.
  [deiferni]


3.4.0 (2014-08-28)
------------------

- General fixes:

  - Fixed translation for filing_number column in dossier listings.
    [phgross]
  - Also check for not supplied mails, when check if dossier could be resolved.
    [phgross]
  - Fixed unicode decode bug in task overview.
    [lknoepfel]
  - OGQuickUploadCapableFileFactory: Set default values before adding content to container.
    (Prevents values set by handlers on ObjectAddedEvent to be overwritten again).
    [lgraf]
  - Fix issue with `prevent_deletion` subscriber not being able to acquire membership_tool
    because of broken acquisition during Plone site deletion.
    [lgraf]
  - Customize plone.dexterity default view for all dexterity content in
    order to be able to omit specific fields, and remove previous customizations.
    [lgraf]


- Changes to document metadata:

  - Document metadata: Refactor behaviors to be a package with separate modules.
    [lgraf]
  - Monkey patch DexterityContent.__getattr__.
    This is required to support dynamic lookup of schema-level default values for
    fields in behaviors. It basically is a backport of this Dexterity 2.x fix:
    https://github.com/plone/plone.dexterity/commit/dd491480b869bbe21ee50ef413c263705af7b170
    [lgraf]
  - Refactored document overview.
    [lgraf]
  - Implement document metadata behavior for mail (incl. upgrade step and init event).
    [mathias.leimgruber]
  - Show classification infos on document overview tab.
    [mathias.leimgruber]
  - Customized document default view in order to render `file`
    field in NO_DOWNLOAD_DISPLAY_MODE.
    [lgraf]
  - Changed German wording for value `unchecked` for both public_trial and archival_value:
    "Noch nicht geprüft" -> "Nicht geprüft"
    [lgraf]
  - Change german wording for descriptions of `public_trial` and `public_trial_statement`
    [lgraf]